# pkl-moment

./: .gitmodules
backend/: .gitignore  Cargo.toml  README.md
backend/api/: Cargo.toml
backend/api/src/: auth.rs  class.rs  company.rs  department.rs  error.rs  journal.rs  letters.rs  lib.rs  log.rs  pdf.rs  penarikan.rs  penarikan_student.rs  pengantaran.rs  pengantaran_student.rs  permohonan.rs  permohonan_student.rs  routes.rs  signature.rs  student.rs  tenure.rs  user.rs  wave.rs
backend/assets/static/: index.html
backend/assets/templates/: penarikan.html  pengantaran.html  permohonan.html
backend/entity/: Cargo.toml
backend/entity/src/: prelude.rs  user.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240503_013152_create_user_roles.rs  m20240503_025221_create_user.rs
backend/migrations/00000000000001_create_user_roles_type/: up.sql
backend/migrations/00000000000002_create_updated_at-function-trigger/: down.sql  up.sql
backend/migrations/00000000000003_create_user_table/: down.sql  up.sql
backend/migrations/00000000000004_create_user_secretary/: up.sql
backend/migrations/00000000000005_create_company_table/: down.sql  up.sql
backend/migrations/00000000000006_create_department_table/: down.sql  up.sql
backend/migrations/00000000000006_create_student_table/: up.sql
backend/migrations/00000000000007_create_class_table/: down.sql  up.sql
backend/migrations/00000000000007_create_permohonan_table/: up.sql
backend/migrations/00000000000007_create_wave_table/: up.sql
backend/migrations/00000000000008_create_pengantaran_table/: up.sql
backend/migrations/00000000000008_create_permohonan_table/: down.sql  up.sql
backend/migrations/00000000000008_create_student_table/: down.sql  up.sql
backend/migrations/00000000000009_create_penarikan_table/: up.sql
backend/migrations/00000000000009_create_pengantaran_table/: down.sql  up.sql
backend/migrations/00000000000009_create_wave_table/: up.sql
backend/migrations/00000000000010_create_letters_table/: down.sql  up.sql
backend/migrations/00000000000010_create_penarikan_table/: down.sql  up.sql
backend/migrations/00000000000011_create_signature_table/: down.sql
backend/migrations/00000000000012_create_letters_many_students_table/: down.sql  up.sql
backend/migrations/00000000000012_create_user_session_table/: down.sql  up.sql
backend/migrations/00000000000013_create_invalidated_jwt_table/: down.sql  up.sql
backend/migrations/00000000000013_create_user_session_table/: up.sql
backend/migrations/00000000000014_create_operation_type/: down.sql  up.sql
backend/migrations/00000000000015_create_table_type/: down.sql  up.sql
backend/migrations/00000000000016_create_log_table/: down.sql  up.sql
backend/migrations/00000000000017_create_journal_table/: down.sql  up.sql
backend/migrations/00000000000017_create_tenure_table/: up.sql
backend/migrations/00000000000018_create_journal_table/: up.sql
backend/migrations/00000000000018_create_tenure_table/: down.sql
backend/migrations/2024-05-03-102908_create_user_roles_type/: down.sql  up.sql
backend/migrations/2024-05-03-111518_create_user_table/: up.sql
backend/migrations/2024-05-05-081458_create_user_admin/: down.sql  up.sql
backend/migrations/2024-05-06-022714_create_company_table/: up.sql
backend/migrations/2024-05-08-001554_create_wave_table/: down.sql  up.sql
backend/migrations/2024-05-08-014943_create_permohonan_table/: up.sql
backend/migrations/2024-05-08-022353_create_pengantaran_table/: up.sql
backend/migrations/2024-05-10-071020_create_penarikan_table/: up.sql
backend/migrations/2024-05-10-071227_create_signature_table/: up.sql
backend/migrations/2024-05-11-013631_create_letters_many_students_table/: down.sql  up.sql
backend/models/: Cargo.toml
backend/models/src/: lib.rs  mod.rs  schema.rs  types.rs
backend/models/src/class/: generated.rs
backend/models/src/company/: generated.rs
backend/models/src/department/: generated.rs
backend/models/src/invalidated_jwt/: generated.rs
backend/models/src/journal/: generated.rs
backend/models/src/letters/: generated.rs
backend/models/src/letters_student/: generated.rs
backend/models/src/log/: generated.rs
backend/models/src/penarikan/: generated.rs
backend/models/src/penarikan_student/: generated.rs
backend/models/src/pengantaran/: generated.rs
backend/models/src/pengantaran_student/: generated.rs
backend/src/: lib.rs  main.rs
frontend/: index.html  (+3 more)
(+166 files in other folders)
