workspace = { members = ["api", "models"] }
[package]
name = "warp-pkl-moment"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "api" }
argon2 = "0.5.3"
diesel = "2.1.6"
diesel-async = { version = "0.4.1", features = ["postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_async_migrations = { version = "0.12.0" }
parking_lot = { version = "0.12.2", features = ["send_guard"] }
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = [
    "postgres",
    "diesel-async",
] }
shuttle-warp = "0.45.0"
thiserror = "1.0.60"
tokio = "1.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = "0.3.7"
