[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
diesel = { version = "2.1.6", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
serde = { version = "1.0.201", features = ["derive"] }
tokio = "1.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = "0.3.7"
models = { path = "../models" }
jsonwebtoken = "9.3.0"
parking_lot = { version = "0.12.2", features = ["send_guard"] }
thiserror = "1.0.60"
chrono = "0.4.38"
serde_json = "1.0.117"
genpdf = "0.2.0"
lopdf = "0.32.0"
simple_pdf_generator = { path = "../simple_pdf_generator/simple_pdf_generator" }
simple_pdf_generator_derive = { path = "../simple_pdf_generator/simple_pdf_generator_derive" }
hijri_date = "0.5.1"
tera = "1.20.0"
